WordExif/machineLearning/output/parser.output
Grammar

    0 $accept: PROTASI $end

    1 PROTASI: LEKSEIS

    2 LEKSEIS: LEKSEIS MEROSLOGOU
    3        | /* empty */

    4 MEROSLOGOU: LLEKSI
    5           | LARTHRO
    6           | LARITHMOS
    7           | LSTIKSI

    8 LARTHRO: Ars_En_Onm
    9        | En_Gen
   10        | Ars_En_Ait
   11        | Pl_Onm
   12        | Pl_Gen
   13        | Ars_Pl_Ait
   14        | Thy_En_Onm
   15        | Thy_En_Gen
   16        | Thy_En_Ait
   17        | Thy_Pl_Ait
   18        | Oud_En_OnmAit
   19        | Oud_Pl_OnmAit

   20 LARITHMOS: ARITHMOSFLOAT
   21          | ARITHMOSINT

   22 LSTIKSI: STIKSI

   23 LLEKSI: OUSIASTIKO
   24       | ONOMATA
   25       | EPITHETO
   26       | RIMA
   27       | EPIRIMA
   28       | ANTONUMIA
   29       | ARTHRO
   30       | PROTHESI
   31       | SUDESMOS
   32       | EPIFONIMA


Terminals, with rules where they appear

$end (0) 0
error (256)
Ars_En_Onm (258) 8
En_Gen (259) 9
Ars_En_Ait (260) 10
Pl_Onm (261) 11
Pl_Gen (262) 12
Ars_Pl_Ait (263) 13
Thy_En_Onm (264) 14
Thy_En_Gen (265) 15
Thy_En_Ait (266) 16
Thy_Pl_Ait (267) 17
Oud_En_OnmAit (268) 18
Oud_Pl_OnmAit (269) 19
OUSIASTIKO (270) 23
ONOMATA (271) 24
EPITHETO (272) 25
RIMA (273) 26
EPIRIMA (274) 27
ANTONUMIA (275) 28
ARTHRO (276) 29
PROTHESI (277) 30
SUDESMOS (278) 31
EPIFONIMA (279) 32
STIKSI (280) 22
ARITHMOSFLOAT (281) 20
ARITHMOSINT (282) 21


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
PROTASI (29)
    on left: 1, on right: 0
LEKSEIS (30)
    on left: 2 3, on right: 1 2
MEROSLOGOU (31)
    on left: 4 5 6 7, on right: 2
LARTHRO (32)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19, on right: 5
LARITHMOS (33)
    on left: 20 21, on right: 6
LSTIKSI (34)
    on left: 22, on right: 7
LLEKSI (35)
    on left: 23 24 25 26 27 28 29 30 31 32, on right: 4


state 0

    0 $accept: . PROTASI $end

    $default  reduce using rule 3 (LEKSEIS)

    PROTASI  go to state 1
    LEKSEIS  go to state 2


state 1

    0 $accept: PROTASI . $end

    $end  shift, and go to state 3


state 2

    1 PROTASI: LEKSEIS .
    2 LEKSEIS: LEKSEIS . MEROSLOGOU

    Ars_En_Onm     shift, and go to state 4
    En_Gen         shift, and go to state 5
    Ars_En_Ait     shift, and go to state 6
    Pl_Onm         shift, and go to state 7
    Pl_Gen         shift, and go to state 8
    Ars_Pl_Ait     shift, and go to state 9
    Thy_En_Onm     shift, and go to state 10
    Thy_En_Gen     shift, and go to state 11
    Thy_En_Ait     shift, and go to state 12
    Thy_Pl_Ait     shift, and go to state 13
    Oud_En_OnmAit  shift, and go to state 14
    Oud_Pl_OnmAit  shift, and go to state 15
    OUSIASTIKO     shift, and go to state 16
    ONOMATA        shift, and go to state 17
    EPITHETO       shift, and go to state 18
    RIMA           shift, and go to state 19
    EPIRIMA        shift, and go to state 20
    ANTONUMIA      shift, and go to state 21
    ARTHRO         shift, and go to state 22
    PROTHESI       shift, and go to state 23
    SUDESMOS       shift, and go to state 24
    EPIFONIMA      shift, and go to state 25
    STIKSI         shift, and go to state 26
    ARITHMOSFLOAT  shift, and go to state 27
    ARITHMOSINT    shift, and go to state 28

    $default  reduce using rule 1 (PROTASI)

    MEROSLOGOU  go to state 29
    LARTHRO     go to state 30
    LARITHMOS   go to state 31
    LSTIKSI     go to state 32
    LLEKSI      go to state 33


state 3

    0 $accept: PROTASI $end .

    $default  accept


state 4

    8 LARTHRO: Ars_En_Onm .

    $default  reduce using rule 8 (LARTHRO)


state 5

    9 LARTHRO: En_Gen .

    $default  reduce using rule 9 (LARTHRO)


state 6

   10 LARTHRO: Ars_En_Ait .

    $default  reduce using rule 10 (LARTHRO)


state 7

   11 LARTHRO: Pl_Onm .

    $default  reduce using rule 11 (LARTHRO)


state 8

   12 LARTHRO: Pl_Gen .

    $default  reduce using rule 12 (LARTHRO)


state 9

   13 LARTHRO: Ars_Pl_Ait .

    $default  reduce using rule 13 (LARTHRO)


state 10

   14 LARTHRO: Thy_En_Onm .

    $default  reduce using rule 14 (LARTHRO)


state 11

   15 LARTHRO: Thy_En_Gen .

    $default  reduce using rule 15 (LARTHRO)


state 12

   16 LARTHRO: Thy_En_Ait .

    $default  reduce using rule 16 (LARTHRO)


state 13

   17 LARTHRO: Thy_Pl_Ait .

    $default  reduce using rule 17 (LARTHRO)


state 14

   18 LARTHRO: Oud_En_OnmAit .

    $default  reduce using rule 18 (LARTHRO)


state 15

   19 LARTHRO: Oud_Pl_OnmAit .

    $default  reduce using rule 19 (LARTHRO)


state 16

   23 LLEKSI: OUSIASTIKO .

    $default  reduce using rule 23 (LLEKSI)


state 17

   24 LLEKSI: ONOMATA .

    $default  reduce using rule 24 (LLEKSI)


state 18

   25 LLEKSI: EPITHETO .

    $default  reduce using rule 25 (LLEKSI)


state 19

   26 LLEKSI: RIMA .

    $default  reduce using rule 26 (LLEKSI)


state 20

   27 LLEKSI: EPIRIMA .

    $default  reduce using rule 27 (LLEKSI)


state 21

   28 LLEKSI: ANTONUMIA .

    $default  reduce using rule 28 (LLEKSI)


state 22

   29 LLEKSI: ARTHRO .

    $default  reduce using rule 29 (LLEKSI)


state 23

   30 LLEKSI: PROTHESI .

    $default  reduce using rule 30 (LLEKSI)


state 24

   31 LLEKSI: SUDESMOS .

    $default  reduce using rule 31 (LLEKSI)


state 25

   32 LLEKSI: EPIFONIMA .

    $default  reduce using rule 32 (LLEKSI)


state 26

   22 LSTIKSI: STIKSI .

    $default  reduce using rule 22 (LSTIKSI)


state 27

   20 LARITHMOS: ARITHMOSFLOAT .

    $default  reduce using rule 20 (LARITHMOS)


state 28

   21 LARITHMOS: ARITHMOSINT .

    $default  reduce using rule 21 (LARITHMOS)


state 29

    2 LEKSEIS: LEKSEIS MEROSLOGOU .

    $default  reduce using rule 2 (LEKSEIS)


state 30

    5 MEROSLOGOU: LARTHRO .

    $default  reduce using rule 5 (MEROSLOGOU)


state 31

    6 MEROSLOGOU: LARITHMOS .

    $default  reduce using rule 6 (MEROSLOGOU)


state 32

    7 MEROSLOGOU: LSTIKSI .

    $default  reduce using rule 7 (MEROSLOGOU)


state 33

    4 MEROSLOGOU: LLEKSI .

    $default  reduce using rule 4 (MEROSLOGOU)
